hw-03/ex-01/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-hw03
spec:
  selector:
    app: nginx-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
